# SimpleGraphics

./: .gitignore  CMakeLists.txt  README.md  test.cpp
src/: Location.cpp  Location.h  Node.cpp  Node.h  Position.cpp  Position.h
src/Nodes/: AxesNode.cpp  AxesNode.h  Grid.cpp  Grid.h  PointNode.cpp  PointNode.h  TextInputNode.cpp  TextInputNode.h  TextNode.cpp  TextNode.h
